--- a/loveheart/index.html
+++ b/loveheart/index.html
@@ -43,7 +43,7 @@
 
              <hr />
    			<span class="keyword">I want to say:</span><br />
-			Mrs.Right<br />
+			Mrs.Hu<br />
             <span class="keyword"> I love you! </span><br />
             --周小狗<br />
 
