--- a/loveheart/index.html
+++ b/loveheart/index.html
@@ -71,7 +71,7 @@ var offsetX = $("#loveHeart").width() / 2;
 var offsetY = $("#loveHeart").height() / 2 - 55;
 var together = new Date();
 
-together.setFullYear(2021,4,17);//1.23；3.29
+together.setFullYear(2021,3,17);//1.23；3.29
 together.setHours(14);
 together.setMinutes(0);
 together.setSeconds(0);
@@ -101,8 +101,8 @@ if (!document.createElement('canvas').getContext) {
 }
 </script>
 <div style="text-align:center;clear:both">
-<p>Made for Mrs.Right, made by <a href="https://github.com/enfangzhong" target="_blank">Viper<a /></p>
-<p>Copyright © 2017 - 2019. All Rights Reserved. Designed by <a href="https://github.com/enfangzhong" target="_blank">Viper<a /> </p>
+<p>Made for Mrs.Hu, made by Heihe</p>
+<p>Copyright © 2017 - 2019. All Rights Reserved. Designed by Heihei </p>
 </div>
 </body>
 </html>
