--- a/loveheart/index.html
+++ b/loveheart/index.html
@@ -43,7 +43,7 @@
 
              <hr />
    			<span class="keyword">I want to say:</span><br />
-			Mrs.Hu<br />
+			Miss.Hu<br />
             <span class="keyword"> I love you! </span><br />
             --周小狗<br />
 
@@ -101,7 +101,7 @@ if (!document.createElement('canvas').getContext) {
 }
 </script>
 <div style="text-align:center;clear:both">
-<p>Made for Mrs.Hu, made by Heihe</p>
+<p>Made for Miss.Hu, made by Heihe</p>
 <p>Copyright © 2017 - 2019. All Rights Reserved. Designed by Heihei </p>
 </div>
 </body>
