--- a/loveheart/index.html
+++ b/loveheart/index.html
@@ -101,7 +101,7 @@ if (!document.createElement('canvas').getContext) {
 }
 </script>
 <div style="text-align:center;clear:both">
-<p>Made for Miss.Hu, made by Heihe</p>
+<p>Made for Miss.Hu, made by Heihei</p>
 <p>Copyright © 2017 - 2019. All Rights Reserved. Designed by Heihei </p>
 </div>
 </body>
